<resources>
    <string name="app_name">DekuDeals</string>
    <string name="product_name">Product</string>
    <string name="product_details">Detail</string>
    <string name="product_developer">Developer</string>
    <string name="product_price">$ price</string>
    <string name="product_msrp">$ msrp</string>
    <string name="user_name">User</string>
    <string name="user_email">Email</string>
    <string name="btn_fav">Favourite</string>
    <string name="menu_me">Profile</string>
    <string name="menu_main">Main</string>
    <string name="more_details">Details</string>
    <string name="game_poster">Game Poster</string>
    <string name="about">About</string>
    <string name="based_on_the_website_dekudeals">Based on the website DekuDeals</string>
    <string name="game_cover_image">Game Cover Image</string>
    <string name="markus_andreas">Markus Andreas</string>
    <string name="markusssandreas_gmail_com">markusssandreas@gmail.com</string>
</resources>