<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/game_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/game_poster" />

        <TextView
            android:id="@+id/game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textStyle="bold"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:id="@+id/current_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/product_price"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:id="@+id/game_msrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/product_msrp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:id="@+id/game_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/product_developer"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:id="@+id/game_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/product_details"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            />

        <Button
            android:id="@+id/button_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/btn_fav"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            style="@style/buttonColor"
            />

    </LinearLayout>

</ScrollView>