<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="150dp"
            android:layout_height="220dp"/>

        <TextView
            android:id="@+id/game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/product_image"
            android:layout_toEndOf="@id/product_image"
            android:textSize="20sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/product_name"/>

        <TextView
            android:id="@+id/game_short_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/product_image"
            android:layout_toRightOf="@id/product_image"
            android:layout_below="@id/game_title"
            android:text="@string/product_details"
            android:textSize="14sp"
            android:maxLines="3"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/current_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/game_short_desc"
            android:layout_toRightOf="@id/product_image"
            android:layout_toEndOf="@id/product_image"
            android:textStyle="bold"
            android:text="@string/product_msrp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_price"
            android:layout_toEndOf="@id/product_image"
            android:layout_toRightOf="@id/product_image"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            >

            <Button
                android:id="@+id/button_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_details"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/dekured"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>